# temper-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  data.json  proposed_tree.json  pyproject.toml
.claude/commands/: temper.md
.claude/skills/temper-skills/: SKILL.md
.claude/skills/temper-skills/scripts/: export_tree.py  skill_render.py  tree.py  update_validation.py  validation_case.py
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: reference.md
docs/audits/: anthropic-skills-2026-07-02.md
examples/ankle_sprain/: README.md  run.py
examples/ankle_sprain/input/: skill.md
examples/ankle_sprain/output/: ankle_tree.json  assess_ankle.py  schema.py  skill.tempered.md  validation_set.json
examples/ankle_sprain/output/ankle-sprain/: SKILL.md
examples/ankle_sprain/output/ankle-sprain/assets/: assess_ankle.validation.jsonl
examples/ankle_sprain/output/ankle-sprain/scripts/: assess_ankle.py  test_assess_ankle.py  test_assess_ankle_ratified.py
examples/dog_day/: README.md  run.py
examples/dog_day/input/: skill.md
examples/dog_day/output/: decide_meal.py  decide_meal.schema.py  decide_meal.validation.jsonl  decide_vet.py  decide_vet.schema.py  decide_walk.py  decide_walk.schema.py  dog_day.tempered.md  test_decide_meal.py  test_decide_vet.py  test_decide_walk.py
examples/dog_day/output/dog-day/: SKILL.md
examples/dog_day/output/dog-day/assets/: decide_vet.validation.jsonl  decide_walk.validation.jsonl
examples/dog_day/output/dog-day/scripts/: decide_meal.py  decide_vet.py  decide_walk.py  test_decide_meal.py  test_decide_vet.py  test_decide_walk.py
examples/dog_food/: README.md  dog_food_checker.py  dog_food_tree.json  route.py  run.py  schema.py  skill.tempered.md  tree.json  validation_set.json
examples/dog_food/input/: skill.md  validation_set.json
examples/dog_food/output/: dog_food_checker.py  dog_food_tree.json  skill.tempered.md
examples/dog_food/output/dog-food/: SKILL.md
examples/dog_food/output/dog-food/assets/: can_dog_eat.validation.jsonl
examples/dog_food/output/dog-food/scripts/: can_dog_eat.py  test_can_dog_eat.py  test_can_dog_eat_ratified.py
examples/license_compat/: README.md  run.py
examples/license_compat/input/: schema.py  skill.md
examples/license_compat/output/: assess_license.py  license_tree.json  skill.tempered.md  validation_set.json
examples/license_compat/output/license-compat/: SKILL.md
examples/license_compat/output/license-compat/assets/: assess_license.validation.jsonl
examples/license_compat/output/license-compat/scripts/: assess_license.py  test_assess_license.py  test_assess_license_ratified.py
examples/parking/: README.md  run.py
examples/parking/input/: skill.md
examples/parking/output/: can_i_park.py  can_i_park_tree.json  schema.py  skill.tempered.md  validation_set.json
examples/parking/output/parking/: SKILL.md
examples/parking/output/parking/assets/: can_i_park.validation.jsonl
examples/parking/output/parking/scripts/: can_i_park.py  test_can_i_park.py  test_can_i_park_ratified.py
examples/ticket_routing/: README.md  run.py
examples/ticket_routing/input/: schema.py  skill.md
examples/ticket_routing/output/: route_ticket.py  route_ticket_tree.json  skill.tempered.md  validation_set.json
examples/ticket_routing/output/ticket-routing/: SKILL.md
examples/ticket_routing/output/ticket-routing/assets/: route_ticket.validation.jsonl
examples/ticket_routing/output/ticket-routing/scripts/: route_ticket.py  test_route_ticket.py  test_route_ticket_ratified.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_303c9ebffe3ad478___init___py.html  z_303c9ebffe3ad478_audit_py.html  z_303c9ebffe3ad478_audit_report_py.html  z_303c9ebffe3ad478_cli_py.html  z_303c9ebffe3ad478_decompose_py.html  z_303c9ebffe3ad478_distill_py.html  z_303c9ebffe3ad478_export_schema_py.html  z_303c9ebffe3ad478_export_skill_py.html  z_303c9ebffe3ad478_export_tree_py.html  z_303c9ebffe3ad478_incremental_py.html  z_303c9ebffe3ad478_ingest_py.html  z_303c9ebffe3ad478_pipelines_py.html  z_303c9ebffe3ad478_schemas_py.html  z_303c9ebffe3ad478_skill_docs_py.html  z_303c9ebffe3ad478_skill_render_py.html  z_303c9ebffe3ad478_sources_py.html  z_303c9ebffe3ad478_tree_py.html  z_303c9ebffe3ad478_update_validation_py.html  z_303c9ebffe3ad478_validate_py.html  z_303c9ebffe3ad478_validation_case_py.html  z_303c9ebffe3ad478_vendor_scripts_py.html  z_3b1941d9022371cc___init___py.html  z_3b1941d9022371cc_agent_cli_py.html  z_3b1941d9022371cc_api_py.html  z_3b1941d9022371cc_base_py.html
scripts/: validate_h2.py
skills/: README.md
skills/temper-skills/: SKILL.md
skills/temper-skills/references/: profiles.md
skills/temper-skills/scripts/: check_install.py
temper_skills/: __init__.py  audit.py  audit_report.py  cli.py  decompose.py  distill.py  export_schema.py  export_skill.py  export_tree.py  incremental.py  ingest.py  llm.py  pipelines.py  schemas.py  skill_docs.py  skill_render.py  sources.py  tree.py  update_validation.py  validate.py  validation_case.py  vendor_scripts.py
temper_skills/backends/: __init__.py  agent_cli.py  api.py  base.py
tests/: conftest.py  test_agent_cli.py  test_api_backend.py  test_api_backend_warm.py  test_arrange_skill_dir.py  test_audit.py  test_audit_report.py  test_backends_select.py  test_cli_audit_dir.py  test_cli_commands.py  test_cli_json.py  test_cli_schema.py  test_cli_validate.py  test_decompose.py  test_distill.py  test_export_schema.py  test_export_skill.py  test_export_tree.py  test_incremental.py  test_pipelines.py  test_skill_docs_sync.py  test_skill_prose_sync.py  test_sources_ingest.py  test_tree.py  test_update_validation.py  test_validate.py  test_validation_case.py  test_vendor_scripts_sync.py
