[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temper-skills"
version = "0.0.1"
description = "Adversarial reviewers write a test suite for your agent skill's decision logic — and freeze that logic into deterministic Python that must keep passing."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Cyril", email = "cyril@hellosunrise.com" }]
keywords = ["llm", "agents", "skills", "testing", "evals", "decision-tree", "adversarial", "determinism"]
dependencies = [
    "litellm>=1.50",      # provider-agnostic model routing (Anthropic, OpenAI, Gemini, local, …)
    "instructor>=1.5",    # Pydantic-validated structured output + retries over LiteLLM
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
vertex = [                      # Claude-on-Vertex via LiteLLM + gcloud ADC (no API key)
    "google-auth>=2.0",
    "google-cloud-aiplatform>=1.38",   # litellm's vertex_ai/* route imports `vertexai`
]

[project.scripts]
temper-skills = "temper_skills.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["temper_skills"]
relative_files = true   # required by the coverage badge action

[tool.hatch.build.targets.wheel]
packages = ["temper_skills"]
