[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temper-skills"
version = "0.0.3"
description = "Adversarial reviewers write a test suite for your agent skill's decision logic — and freeze that logic into deterministic Python that must keep passing."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Cyril", email = "cyril@hellosunrise.com" }]
keywords = ["llm", "agents", "skills", "testing", "evals", "decision-tree", "adversarial", "determinism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.50",      # provider-agnostic model routing (Anthropic, OpenAI, Gemini, local, …)
    "instructor>=1.5",    # Pydantic-validated structured output + retries over LiteLLM
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/CyrilLeMat/temper-skills"
Repository = "https://github.com/CyrilLeMat/temper-skills"
Issues = "https://github.com/CyrilLeMat/temper-skills/issues"
Changelog = "https://github.com/CyrilLeMat/temper-skills/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "mypy>=1.10"]
vertex = [                      # Claude-on-Vertex via LiteLLM + gcloud ADC (no API key)
    "google-auth>=2.0",
    "google-cloud-aiplatform>=1.38",   # litellm's vertex_ai/* route imports `vertexai`
]

[project.scripts]
temper-skills = "temper_skills.cli:main"

[tool.mypy]
# First-pass adoption: the package, pragmatic strictness. Tests and examples are out
# of scope for now; tighten (disallow_untyped_defs) as annotations accumulate.
files = ["temper_skills"]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*", "instructor", "instructor.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
# examples/ holds loop-GENERATED trees (never hand-edited — regenerate instead) and
# demo run.py scripts with sys.path-before-import; the skill's scripts/ dir is a
# vendored mirror of temper_skills/ (regenerate via vendor_scripts, don't format it).
extend-exclude = ["examples", ".claude/skills/temper-skills/scripts"]

[tool.coverage.run]
source = ["temper_skills"]
relative_files = true   # required by the coverage badge action

[tool.coverage.report]
fail_under = 90

[tool.hatch.build.targets.wheel]
packages = ["temper_skills"]
